updated based on copilot review where applicable

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,11 +23,6 @@ dependencies = [
     "hetnet-analysis @ git+https://github.com/CU-DBMI/hetionet-analysis.git@f371064da1498ac984aa6ec6ed0ba2739c7b0259",
 ]
 
-[project.optional-dependencies]
-dev = [
-    "jupytext",
-    "poethepoet",
-]
 
 [build-system]
 requires = ["setuptools>=61.0"]
@@ -39,8 +34,8 @@ include = ["src*"]
 
 [tool.poe.tasks]
 # Individual pipeline steps
-load-data = "python scripts/load_data.py"
-filter-change = "python scripts/percent_change_and_filtering.py"
+where = ["src"]
+include = ["multi_dwpc*"]
 go-hierarchy-analysis = "python scripts/go_hierarchy_analysis.py"
 filter-jaccard = "python scripts/jaccard_similarity_and_filtering.py"
 gen-permutation = "python scripts/permutation_null_datasets.py"
@@ -56,7 +51,7 @@ lookup-dwpc-api-with-docker = { shell = "COMPOSE_PROGRESS=plain open -a Docker &
 # Post-DWPC analysis
 metapath-signature-analysis = "python scripts/metapath_signature_analysis.py"
 divergence-score-analysis = "python scripts/divergence_score_analysis.py"
-
+lookup-dwpc-api-with-docker = { shell = "COMPOSE_PROGRESS=plain until docker info >/dev/null 2>&1; do echo 'Waiting for Docker daemon...'; sleep 5; done && cd connectivity-search-backend && COMPOSE_PROGRESS=plain ./run_stack.sh up --build -d && cd .. && python scripts/wait_for_api.py && poe lookup-dwpc-api && cd connectivity-search-backend && COMPOSE_PROGRESS=plain docker compose down" }
 # Testing
 test-dwpc-accuracy = "python scripts/test_dwpc_accuracy.py"
 benchmark-dwpc = "python scripts/benchmark_dwpc_methods.py"
